--- a/RZDKursovoy/Menu.xaml
+++ b/RZDKursovoy/Menu.xaml
@@ -28,7 +28,7 @@
                     Style="{StaticResource MaterialDesignFloatingHintDatePicker}"  Language="Ru-ru" VerticalAlignment="Center" Margin="0,30,0,0" AutomationProperties.IsOffscreenBehavior="Onscreen" />
                 </Grid>
             </TabItem>
-            <TabItem x:Name="LK_Tab" Header="Личный кабинет" Margin="0">
+            <TabItem x:Name="LK_Tab" Header="Личный кабинет">
                 <Grid>
                     <Grid x:Name="LK_Empty" d:IsHidden="True">
                         <Label Content="У вас пока что нет приобретенных билетов" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontFamily="Segoe UI Semilight"></Label>
@@ -40,8 +40,8 @@
                                 <ColumnDefinition></ColumnDefinition>
                                 <ColumnDefinition></ColumnDefinition>
                             </Grid.ColumnDefinitions>
-                            <Button Grid.Column="0" x:Name="CancelTripBUTTON" Click="CancelTripBUTTON_Click" Content="Отменить поездку и вернуть деньги за билет" Margin="0" Padding="0" VerticalContentAlignment="Center" Height="34"/>
-                            <Button Grid.Column="1" x:Name="PrintTicketBUTTON" Click="PrintTicketBUTTON_Click" IsDefault="True" Content="Сохранить билет" Padding="0" Height="34"/>
+                            <Button Grid.Column="0" x:Name="CancelTripBUTTON" Click="CancelTripBUTTON_Click" Content="Отменить поездку и вернуть деньги за билет" Margin="1" VerticalContentAlignment="Center" Height="34"/>
+                            <Button Grid.Column="1" x:Name="PrintTicketBUTTON" Click="PrintTicketBUTTON_Click" Margin="1" IsDefault="True" Content="Сохранить билет" Padding="0" Height="34"/>
                         </Grid>
                     </Grid>
                 </Grid>
